terraform-vpc/private-route-table.tf
resource "aws_route_table" "private_rt" {

  vpc_id = aws_vpc.main.id
}

resource "aws_route" "private_nat" {

  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "private_assoc" {

  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.private_rt.id
}
