terraform-vpc/pub-route-table.tf
resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main.id
}

resource "aws_route" "public_internet" {

  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_assoc" {

  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_rt.id
}
